# 25-2-computer-simulator

./: CMakeLists.txt  README.md
include/: cpu.h  disk.h  functions.h  gpu.h  kbd.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
